# quickmail

./: .gitignore  Cargo.toml  LICENSE  README.md  config.yml.example
src/: main.rs
