[package]
name = "quickmail"
version = "0.1.0"
edition = "2021"
description = "一个快速发送邮件的命令行工具"
authors = ["Med0paW<medopaw@gmail.com>"]
license = "MIT" # 或其他许可证
repository = "https://github.com/medopaw/quickmail"
readme = "README.md"
keywords = ["email", "cli", "mail"]
categories = ["command-line-utilities", "email"]

[dependencies]
lettre = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.4", features = ["derive"] }
keyring = "2.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
